<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="16dp"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false">

        <!-- Przycisk 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:background="@drawable/rounded_button"
            android:padding="16dp"
            android:gravity="center"
            android:onClick="onButtonClick">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_camera"
                android:contentDescription="@string/ic_cmr"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <!-- Przycisk 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:background="@drawable/rounded_button"
            android:padding="16dp"
            android:gravity="center"
            android:onClick="onButtonClick">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_history"
                android:contentDescription="@string/ic_his"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:background="@drawable/rounded_button"
            android:padding="16dp"
            android:gravity="center"
            android:onClick="onButtonClick">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_settings"
                android:contentDescription="@string/ic_set"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
        <!-- Dodaj więcej przycisków analogicznie -->
    </GridLayout>
</ScrollView>
